--- a/Qmos.UI/Views/Users/Form.cshtml
+++ b/Qmos.UI/Views/Users/Form.cshtml
@@ -33,8 +33,8 @@
                             <div class="form-group row text-left">
                                 <div class="col-lg-12">
                                     <span class="text-danger"> *</span><span>
-    Required fields
-</span>
+                                        Required fields
+                                    </span>
                                 </div>
                             </div>
                             <form asp-action="Post" role="form" method="post">
@@ -49,15 +49,13 @@
                                         <label>
                                             First name
                                         </label><span class="text-danger"> *</span>
-                                        <input asp-for="@Model.TX_FirstName" type="text" placeholder="
-First name" class="form-control">
+                                        <input asp-for="@Model.TX_FirstName" type="text" placeholder="First name" class="form-control">
                                     </div>
                                     <div class="form-group col-lg-3 col-md-3">
                                         <label>
                                             Second name
                                         </label>
-                                        <input asp-for="@Model.TX_SecondName" type="text" placeholder="
-Second name" class="form-control">
+                                        <input asp-for="@Model.TX_SecondName" type="text" placeholder="Second name" class="form-control">
                                     </div>
                                     <div class="form-group col-lg-3 col-md-3">
                                         <label>
@@ -118,6 +116,83 @@ Second name" class="form-control">
         </div>
     </div>
 
+    @if (Model.ID_User != 0)
+    {
+        <div class="row justify-content-md-center">
+            <div class="col-lg-offset-2 col-lg-8">
+                <div class="ibox ">
+                    <div class="ibox-title">
+                        <h5>Roles</h5>
+                        <div class="ibox-tools">
+                            <a class="collapse-link">
+                                <i class="fa fa-chevron-up"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="ibox-content">
+                        <div class="row">
+                            <form>
+                                <input id="ID_UserR" type="hidden" value="@Model.ID_User" />
+                                <div class="col-md-4 form-group">
+                                    <label>Application</label>
+                                    <select id="ID_Application" asp-items="@(new SelectList(Model.ListAplications, "Value", "Text"))" class="form-control"><option value="">Select an application</option></select>
+                                </div>
+                                <div class="col-md-4 form-group">
+                                    <label>Roles</label>
+                                    <select id="ID_Role" class="form-control"><option value="">Select a role</option></select>
+                                </div>
+                                <div class="col-md-4 form-group">
+                                    <a id="btn-save-role" class="btn btn-success" style="margin-top:23px"><i class="fa fa-plus"></i> Add</a>
+                                </div>
+                            </form>
+                        </div>
+                        @if (Model.RolesUser != null)
+                        {
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <table class="table table-striped table-bordered table-hover dataTables" id="table">
+                                        <thead>
+                                            <tr>
+                                                <th>Role</th>
+                                                <th>Application</th>
+
+                                                <th class="text-center">Actions</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @{ foreach (var item in Model.RolesUser)
+                                                {
+                                                    <tr>
+                                                        <td>
+                                                            @item.ID_RoleNavigation.TX_Role
+                                                        </td>
+                                                        <td>
+                                                            @item.ID_RoleNavigation.ID_ElementNavigation.TX_Name
+                                                        </td>
+
+                                                        <td class="text-center">
+                                                            <div class="btn-group">
+                                                                <a data-id="@item.ID_UserRoleApplication" class="btn btn-sm btn-danger delete"><i class="fa fa-remove"></i> Remove</a>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                }
+                                            }
+                                        </tbody>
+                                    </table>
+
+                                </div>
+                            </div>
+                        }
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+
+
+
+
 </div>
 
 @section Scripts{
@@ -141,7 +216,7 @@ Second name" class="form-control">
 
 
 
-            $('.chosen-select').chosen({ width: "100%", no_results_text: "Oops, no hay coincidencias!" });
+            $('.chosen-select').chosen({ width: "100%", no_results_text: "Oops, no matches!" });
             if ('@Model.ID_User' == '0') {
                 $('.chosen-select').val("").trigger('chosen:updated');
             }
@@ -166,7 +241,7 @@ Second name" class="form-control">
                     data: { id: $("#ID_Application").val() },
                     success: function (retorno) {
                         $("#ID_Role").empty();
-                        $("#ID_Role").append("<option value=''>Seleccione un rol</option>");
+                        $("#ID_Role").append("<option value=''>Select a role</option>");
 
                         var valores = retorno.result.result;
                         $(valores).each(function (index, item) {
@@ -180,10 +255,6 @@ Second name" class="form-control">
                             option.val(item.iD_Role);
 
                             //Add the Option element to DropDownList.
-
-                            if (item.tX_Role == "Administrador de Clientes" && $("#TX_LinkAdministrator").val() == 0) {
-                                option.prop("disabled", true)
-                            }
 
                             $("#ID_Role").append(option);
                         });
@@ -218,38 +289,17 @@ Second name" class="form-control">
 
             $('#btn-save').on('click', function () {
                 if ($("#TX_Email").val() == "") {
-                    alert("Debe escribir un correo electrónico");
+                    alert("You must write an email");
                     return false;
                 }
                 if ('@Model.ID_User' == '0') {
                     if ($("#TX_Password").val() == "") {
-                        alert("Debe escribir un Password");
+                        alert("You must write a password");
                         return false;
                     } else {
                         ValidatePassword();
                     }
                 }
-                if ('@ViewData["Customer"]' != "" && '@ViewData["Customer"]' != null) {
-                    if ($(`#DfPriceList`).val() == "0") {
-                        alert("Debe seleccionar una lista de precios");
-                        return false;
-                    }
-
-                }
-                //$.ajax({
-                //    url: "@Url.Action("AddRole", "Users")",
-                //    method: "POST",
-                //    data:  {
-                //        ID_UserR: $("#ID_UserR").val(),
-                //        ID_Role: $("#ID_Role").val()
-                //    },
-                //    success: function (retorno) {
-                //       location.reload(true);
-                //    },
-                //    error: function (response) {
-                //        toastr.error("Error", `An error occurred. ${response.responseText}`, "Error", { timeOut: 6000 });
-                //    }
-                //});
             });
 
 
