--- a/Qmos.UI/Views/Dashboard/IronYield.cshtml
+++ b/Qmos.UI/Views/Dashboard/IronYield.cshtml
@@ -20,7 +20,7 @@
 <div class="col-lg-12" data-rolable-url="dash-IronYield" data-rolable-name="Iron Yield">
     <div class="ibox ">
         <div class="ibox-title">
-            <h5 style=" font-size: 150%;">Date 07-07-2020 13:10:00</h5>
+            <h5 style=" font-size: 150%;">@DateTime.Now.ToString("MM/dd/yyyy HH:mm")</h5>
             <div class="ibox-tools">
                 <div onLoad="carga()" class="font-bold" style=" font-size: 150%;">
                     <span id="hora">00</span>:<span id="minuto">00</span>:<span id="segundo">01</span>
