--- a/Qmos.UI/Views/Dashboard/MTDProduction.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDProduction.cshtml
@@ -14,7 +14,6 @@
 
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-sm-4">
-
         <h2>@(!string.IsNullOrEmpty((string)ViewData["Root"]) ? @ViewData["Title"].ToString() : "")</h2>
     </div>
 </div>
@@ -22,7 +21,7 @@
 <div class="col-lg-12" data-rolable-url="dash-MTDTapTempand02PPM" data-rolable-name="Crew">
     <div class="ibox float-e-margins">
         <div class="ibox-title">
-            <h5 style=" font-size: 150%;">Date 07-07-2020 13:10:00</h5>
+            <h5 style=" font-size: 150%;">@DateTime.Now.ToString("MM/dd/yyyy HH:mm")</h5>
             <div class="ibox-tools">
                 <div onLoad="carga()" class="font-bold" style=" font-size: 150%;">
                     <span id="hora">00</span>:<span id="minuto">00</span>:<span id="segundo">01</span>
