--- a/Qmos.UI/Views/Dashboard/MTDTapTempand02PPM.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDTapTempand02PPM.cshtml
@@ -21,7 +21,7 @@
 <div class="col-lg-12" data-rolable-url="dash-MTDTapTempand02PPM" data-rolable-name="Crew">
     <div class="ibox float-e-margins">
         <div class="ibox-title">
-            <h5 style=" font-size: 150%;">Date 07-07-2020 13:10:00</h5>
+            <h5 style=" font-size: 150%;">@DateTime.Now.ToString("MM/dd/yyyy HH:mm")</h5>
             <div class="ibox-tools">
                 <div onLoad="carga()" class="font-bold" style=" font-size: 150%;">
                     <span id="hora">00</span>:<span id="minuto">00</span>:<span id="segundo">01</span>
