--- a/Qmos.UI/Views/Dashboard/MTDProduction.cshtml
+++ b/Qmos.UI/Views/Dashboard/MTDProduction.cshtml
@@ -30,6 +30,24 @@
         </div>
         <div class="ibox-content">
             <div class="row">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <ul class="list-inline">
+                            <li class="list-inline-item">
+                                <i class="fa fa-circle" style="color:#269643;"></i>
+                                Increase
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fa fa-circle" style="color:red;"></i>
+                                Decrease
+                            </li>
+                            <li class="list-inline-item">
+                                <i class="fa fa-circle" style="color:#148dfb;"></i>
+                                Total
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="col-lg-12">
                     <canvas id="chartMTDProduction" height="157" width="500"></canvas>
                 </div>
